# agents-01-foundation

./: .gitignore  README.md  pyproject.toml
examples/: 01_example_calculator_tool.py  02_example_retrieval.py  03_example_sdk_tool_runner.py
outputs/: 01_output_calculator_tool.md  02_output_retrieval.md  03_output_sdk_tool_runner.md
src/: executor.py  llm.py
src/retrieval/: chunker.py  embedder.py  index.py  tool.py
src/tools/: base.py  calculator.py  registry.py
