[project]
name = "agents-01-foundation"
version = "0.1.0"
description = "Unit 1: The Augmented LLM - Tools + Retrieval foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]
